--- a/src/main/resources/assets/nathanmod/lang/en_US.lang
+++ b/src/main/resources/assets/nathanmod/lang/en_US.lang
@@ -16,7 +16,7 @@ elmLog.name=Elm Wood
 HickoryLeaves.name=Hickory Leaves
 elmLeaves.name=Elm Leaves
 
-HickorySlab.name=Hickory Slabs
+NathanMod.Hickoryslab=Hickory Slabs
 elmSlab.name=Elm Slabs
 
 Hickory.name=Use the correct metadata next time
