--- a/src/main/resources/assets/nathanmod/lang/en_US.lang
+++ b/src/main/resources/assets/nathanmod/lang/en_US.lang
@@ -9,19 +9,23 @@ tile.nathanmod_creativeQuartz.name=Creative Quartz
 
 HickoryPlanks.name=Hickory Wood Planks
 elmPlanks.name=Elm Wood Planks
-BeechPlanks.name=Beech Wood Planks
+beechPlanks.name=Beech Wood Planks
 
 HickoryLog.name=Hickory Wood
 elmLog.name=Elm Wood
-BeechLog.name=Beech Wood
+beechLog.name=Beech Wood
 
 HickoryLeaves.name=Hickory Leaves
 elmLeaves.name=Elm Leaves
-BeechLeaves.name=Beech Leaves
+beechLeaves.name=Beech Leaves
 
 NathanMod.Hickoryslab.name=Hickory Slabs
 NathanMod.elmslab.name=Elm Slabs
-NathanMod.Beechslab.name=Beech Slabs
+NathanMod.beechslab.name=Beech Slabs
+
+HickorySapplings.name=Hickory Sapling
+elmSapplings.name=Elm Sapling
+beechSapplings.name=Beech Sapling
 
 Hickory.name=Use the correct metadata next time
 
